fix overflow css

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .box_content {
-   height: 200px;
+   height: 250px;
    width: 540px;
 
    background-color: #fff;
